<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="488dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:hint="@string/text_1_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:text="" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:hint="@string/text_2_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:text="" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/compare_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cta" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_default" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>